# butterfly-with-ai

./: .clainrules  .clinerules  .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .roomodes  .yamllint.yaml  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CLEAN_ARCHITECTURE_FINAL.md  CLEAN_ARCHITECTURE_FINAL_RESULTS.md  CLEAN_ARCHITECTURE_STRUCTURE.md  COMMAND_ANALYSIS_IMPLEMENTATION.md  DEPENDENCY_INJECTION_OPTIMIZATION.md  Dockerfile  FILE_SIZE_OPTIMIZATION.md  LICENSE  Makefile  Makefile.config  README.md  STARTUP.md  WEBSOCKET_PROTOCOL.md  auto_debug_cycle.py  circus.ini  config_console_only.env  config_file_export.env  config_grafana_cloud.env  config_grafana_cloud_basic.env  config_grafana_cloud_development.env  config_grafana_cloud_with_logs.env  config_jaeger_local.env  config_otlp_collector.env  debug_terminal.py  demo_cli_langchain_openhands_actual.py  demo_langchain_real.py  demo_openhands_client.py  demo_openhands_multiagent.py  demo_openhands_server.py  (+23 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.roo/: mcp.json
assets/: Dockerfile  aetherterm.service  aetherterm.socket  butterfly.service  butterfly.socket
assets/docker/: run.sh
butterfly/: __about__.py  __init__.py  containers.py  escapes.py  main.py  pam.py  routes.py  server.py  socket_handlers.py  utils.py
butterfly/scripts/: butterfly.py
butterfly/templates/: index.html  motd.j2
butterfly/terminals/: __init__.py  asyncio_terminal.py  base_terminal.py  default_terminal.py
docs/: AETHERTERM_SHELL_MODES.md  ARM64_SUPPORT.md  BASIC_OPERATION_TEST.md  CENTRAL_CONTROL_TESTING.md  COMPONENT_ARCHITECTURE.md  IMPLEMENTATION_ANALYSIS.md  LANGCHAIN_MEMORY_ARCHITECTURE.md  NEXT_SESSION_STARTUP_GUIDE.md  OPENTELEMETRY_SETUP.md  OPTIONAL_DEPENDENCIES.md  README.md  README_COMPREHENSIVE.md  RECENT_IMPROVEMENTS.md  TELEMETRY_ALTERNATIVES.md  TELEMETRY_STATUS.md  TERMINAL_SCREEN_BUFFER_ENHANCEMENTS.md  TEST_PY_INTEGRATION.md  VENDOR_AGNOSTIC_TELEMETRY_COMPLETE.md  phase_1_memory_foundation.md  phase_2_log_summarization.md  phase_3_retrieval_enhancement.md  plan.md  vector_optimization_complete.md
docs/archive/: AGENT_INTEGRATION.md
docs/archived/: OPENHANDS_VSCODE_INTEGRATION.md
docs/archived/analysis/: CLEAN_ARCHITECTURE_SUMMARY.md  CODE_ANALYSIS_COMPREHENSIVE_REPORT.md  FILE_SIZE_ANALYSIS.md  FINAL_COMPLETION_REPORT.md  LOCAL_MEMORY_ANALYSIS.md  MIGRATION_PROGRESS.md  TERMINAL_FIXES_PROGRESS.md  THEME_SYSTEM_USAGE.md
docs/archived/developers/: LANGCHAIN_COMPREHENSIVE_ARCHITECTURE.md  implementation_guide_and_testing.md
docs/archived/users/: SECURITY_GUIDE.md  USER_GUIDE.md
docs/demo/: COORDINATION_DEMO_REPORT.md  LANGCHAIN_INTEGRATION_REPORT.md
docs/developers/: CENTRAL_CONTROL_ARCHITECTURE.md  COMPONENT_FUNCTIONS.md  FEATURE_DEVELOPMENT_GUIDE.md  HIGH_LEVEL_AGENT_DESIGN.md  INDEPENDENT_AI_DESIGN.md  PACKAGE_RESTRUCTURE.md  SYSTEM_CAPABILITIES.md  pattern_analysis_optimization.md
docs/developers/tech/: OWNER_DETECTION.md
docs/platform/: DEPENDENCY_INJECTION.md  DEVELOPMENT_ROADMAP.md  SOCKET_IO_TRACING.md  WORKSPACE_INITIALIZATION.md
docs/platform/architecture/: AI_AGENT_CHAT_DESIGN.md
docs/tech/: DEBUG_LOG.md  SESSION_SHARING.md
docs/users/: AI_FEATURES_GUIDE.md  README.md
docs/users/business/: AI_SESSION_MANAGEMENT_DESIGN.md  USER_PERSONAS.md
docs/users/engineering/: AGENTSERVER_MODES_AND_CONFIG.md
docs/users/operations/: README.md
docs/users/tech/: README.md
docs/workspace/: RESTART_INSTRUCTIONS.md
docs/workspace/work/: AI_AGENT_TAB_DESIGN.md  AI_AGENT_TASK_CONFIGURATION.md  CURRENT_SESSION_DESIGN.md  EXISTING_AI_ANALYSIS.md  HIERARCHICAL_AGENT_ARCHITECTURE.md  HIERARCHICAL_EVENT_NAMING_REFACTOR.md  OPENHANDS_INTEGRATION_DESIGN.md  PANE_COORDINATION_SYSTEM.md  SOCKET_IO_ARCHITECTURE_REDESIGN.md  TAB_CREATION_CHANNEL_DESIGN.md  TAB_CREATION_SCROLL_BUFFER_ANALYSIS.md  TERMINAL_AUTO_CREATION_RESOLUTION.md  TERMINAL_CONNECTION_DEBUG_STATUS.md
frontend/: .env.example  .prettierrc.json  README-CHAT.md  debug-log-monitor.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-log-monitor.html  test-sidebar.html  vite.config.ts  vite.config.ts.timestamp-1750527560947-2cbebf317e749.mjs
frontend/src/: App.vue  main.ts
frontend/src/components/: AIAssistantComponent.vue  AdminControlPanel.vue  AdvancedInventorySearch.vue  BlockAlert.vue  ChatComponent.vue  CloudCredentialsManager.vue  DevJWTRegister.vue  ErrorBoundary.vue  ErrorScreen.vue  FloatingControlPanel.vue  InventorySearchPanel.vue  LoadingScreen.vue  MainContentView.vue  NewArchitectureTest.vue  OperationContextPanel.vue  PaneTerminal.vue  README.md  SelectionActionPopup.vue  ServerInventoryPanel.vue  SimpleChatComponent.vue  SocketTrackingMonitor.vue  SteampipeConnectionManager.vue  SupervisorControlPanel.vue  TabBarContainer.vue  TabManager.vue  (+11 more)
grafana/alerts/: socketio-alerts.yaml
grafana/dashboards/: aetherterm-socketio-tracing.json
models/phi-4-mini/: Makefile  Modelfile
models/phi-4-reasoning/: Makefile  Modelfile
scripts/: openobserve_auth_analysis.py  openobserve_ui_debug.py  setup_arm64.sh  setup_jupyter.sh  test_console_telemetry.py  test_grafana_cloud_integration.py  test_grafana_cloud_setup.py  test_openobserve_cloud.py  test_openobserve_default.py  test_openobserve_demo.py  test_openobserve_direct.py  test_openobserve_endpoints.py  test_openobserve_real.py  test_openobserve_rex.py  test_optional_deps.py  test_telemetry_config.py  test_telemetry_direct.py  test_telemetry_simple.py  test_tracing.py
src/aetherterm/: __about__.py  aetherterm.conf.default  aetherterm.toml.default  containers.py  escapes.py  main.py  pam.py  routes.py  server.py  socket_handlers.py  utils.py
static/: index.html
static/assets/: index.BYbAmVvn.css  index.opjR7e8_.js  socket.B_mMAB35.js  terminal.dC09zdKq.js  vue-vendor.UUt_bPGB.js  vuetify.a0Xc11tE.js
tests/: test_debug_socketio.py  test_multiwindow_sync.py  test_owner_detection.py  test_pane_splitting.py  test_session_api.py  test_session_communication.py  test_session_sharing.py  test_workspace_simple.py
(+344 files in other folders)
